--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/index.css">
-  </head>
+    <link rel="stylesheet" href="css/index.css" />
   <body>
     <header class="header">
       <nav
